<resources>
    <string name="app_name">TransportMTL</string>
    <string name="Erreur">Error</string>
    <string name="MiseAJourDlg_Carte_SD_detectee">SD card detected</string>
    <string name="main_lbl_choix_transporteur">Please choose a public transit</string>
    <string name="arret_title_choixarret">Please enter your bus stop number or a bus route number</string>
    <string name="arret_inconnu_msg">There is no schedule for this bus stop</string>
    <string name="arret_inconnu_titlebox">Unknown bus stop</string>
    <string name="update_manager_title">Update manager</string>
    <string name="update_manager_find">STRING_NOT_DEFINED_ERROR</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_continue">Continue</string>
    <string name="general_ok">Ok</string>
    <string name="preference_title">Preference</string>
    <string name="arret_bouton_miseajour">Update</string>
    <string name="arret_bouton_listecircuit">Route Listings</string>
    <string name="arret_bouton_rechercher">Search</string>
    <string name="favoris_title">Bookmarks</string>
    <string name="notification_titre">Notification</string>
    <string name="listearret_notification_aucunarret_msg">There is no schedule for this stop</string>
    <string name="listearret_notification_aucunarret_title">No schedule available</string>
    <string name="menu_option_ajouter_favoris">Add to bookmarks</string>
    <string name="txtMode">Mode:</string>
    <string name="Horaire_ajout_favoris_ok">Bookmark added</string>
    <string name="Horaire_ajout_favoris_nok">Error while trying to add to bookmarks</string>
    <string name="Horaire_msg_ajout_favoris_deja_existant">Stop already in your bookmark !</string>
    <string name="jour_lundi">Monday</string>
    <string name="jour_mardi">Tuesday</string>
    <string name="jour_mercredi">Wednesday</string>
    <string name="jour_jeudi">Thursday</string>
    <string name="jour_vendredi">Friday</string>
    <string name="jour_samedi">Saturday</string>
    <string name="jour_dimanche">Sunday</string>
    <string name="SupprimerTousFavoris">Delete all your bookmarks</string>
    <string name="SupprimerTousFavorisOk">Bookmarks deleted</string>
    <string name="SupprimerTousFavorisNOk">There is no bookmarks to delete</string>
    <string name="notifier_minuteBeforeBusStop">minutes before departure</string>
    <string name="notifier_HeureDePassage">Departure Time:</string>
    <string name="NotifierDlg_Notification_ajoutee">Notification added</string>
    <string name="NotifierDlg_Notification_apres_heure_passage">Notification time is after time departure !</string>
    <string name="NotifierDlg_Notification_heure_passage_dans_passee">Notification time is in the past !</string>
    <string name="NotifierDlg_Already_a_notification">There is already a notification on the</string>
    <string name="NotifierDlg_Which_to_replace">, do you wish to replace it ?</string>
    <string name="jour_semaine">Weekday</string>
    <string name="nodatabase_txt">No database available. Please make a data update</string>
    <string name="miseajour_eula">You are about to update schedule information from various transportation authorities. The update\'s size is a few megabytes. Update request is a few kilobytes.If you don\'t have wireless data plan, we recommend the use of a WiFi connection to make updates.Rhatec is not liable for bandwidth charges incurred by updates.Rhatec reserves the right to stop producing updates at any time without notice. </string>
    <string name="AccesCircuitDlg_veuillez_une_choisir_direction">Please choose a direction</string>
    <string name="notifier_ParametreNotification">Notification Parameters:</string>
    <string name="HoraireItemView_Passage_le">Transit: </string>
    <string name="HoraireItemView_seulement">only</string>
    <string name="HoraireItemView_Passage_au_6_minutes_ou_moins">Transit each 6 minute or less</string>
    <string name="HoraireSpinnerDlg_Horaire_pour_arret">Schedule for stop </string>
    <string name="HoraireSpinnerDlg_Veuillez_choisir_un_circuit">Please choose route</string>
    <string name="HoraireSpinnerDlg_Veuillez_choisir_un_horaire">Please choose a schedule</string>
    <string name="ListeArretDlg_Liste_d_arret_pour">Stop for </string>
    <string name="ListeArretDlg_Aucun_horaire_disponible">No schedule available</string>
    <string name="ListeArretDlg_Debarcadere_seulement">Exit only</string>
    <string name="ListeCircuitDlg_Liste_de_circuit_pour">Route Listings for</string>
    <string name="MiseAJourDlg_Mise_a_jour_terminee_succes">Update ended with success</string>
    <string name="MiseAJourDlg_miseAjour_annule_par_utilisateur">Update canceled by user</string>
    <string name="MiseAJourDlg_Carte_SD_absente">SD Card missing</string>
    <string name="MiseAJourDlg_CarteSD_obligatoire_chargement_bases_de_donnees">SD card is required for update downloading.</string>
    <string name="MiseAJourDlg_connecte_a">Connected to</string>
    <string name="MiseAJourDlg_miseAjour_accessible_wifi">Update available only on mode WIFI according to your preference (See Menu/Preference/Type of connection). </string>
    <string name="MiseAJourDlg_miseAjour_accessible_3G">Update available only on mode 3G according to your preference (See Menu/Preference/Type of connection).</string>
    <string name="MiseAJourDlg_aucune_connexion_disponible">No connection available</string>
    <string name="MiseAJourDlg_Societe">Company</string>
    <string name="MiseAJourDlg_Grosseur">Size</string>
    <string name="MiseAJourDlg_Importance">Priority</string>
    <string name="MiseAJourDlg_Importance_Haute">High</string>
    <string name="MiseAJourDlg_Importance_Basse">Low</string>
    <string name="MiseAJourDlg_erreur_communication_serveur">Communication error with the server. Please update your software or try again.</string>
    <string name="MiseAJourDlg_progres_en_cours">In progress: 0%</string>
    <string name="MiseAJourDlg_Terminer">End</string>
    <string name="MiseAJourDlg_Continuer">Continue</string>
    <string name="PreferenceDlg_remise_a_zero_favoris_patienter">Reset in progress... Please wait !</string>
    <string name="RechercheArretDlg_rechercher_arret_pour">Search bus stop for </string>
    <string name="RechercheArretDlg_aucune_mise_a_jour">No database available for</string>
    <string name="RechercheArretDlg_Autobus_inconnu">Unknown bus</string>
    <string name="UpdateManager_donnees_recus_format_incompatbile">Corrupted data received</string>
    <string name="UpdateManager_Essayer_mettre_a_jour_application">Update your application</string>
    <string name="UpdateManager_telechargement_en_cours">Download in progress...</string>
    <string name="UpdateManager_Echec_mise_a_jour_Favoris">Bookmarks update failed.</string>
    <string name="UpdateManager_mise_a_jour_favoris_en_cours">Updating bookmarks...</string>
    <string name="UpdateManager_aucune_mise_a_jour_disponible">No update available.</string>
    <string name="UpdateManager_serveur_down">We are currently having issues with our servers. Please try again later.</string>
    <string name="UpdateManager_more_information">More information:</string>
    <string name="MiseAJourDlg_Recherche_MAJ">Searching for update...</string>
    <string name="MiseAJourDlg_Annuler_rechercher">Cancel search...</string>
    <string name="MiseAJourDlg_Annuler">Cancel</string>
    <string name="HoraireSpinnerDlg_Station">Station:</string>
    <string name="MenuCreator_Accueil">Home</string>
    <string name="MenuCreator_Favoris">Bookmarks</string>
    <string name="MenuCreator_Preferences">Preference</string>
    <string name="MenuCreator_MAJ">Update</string>
    <string name="FavorisDlg_Titre">Please choose a bookmark</string>
    <string name="FavorisDlg_choisir_mode">Please choose mode</string>
    <string name="NotifierDlg_Bouton_Definir">Add</string>
    <string name="NotifierDlg_Bouton_Reinitialiser">Cancel</string>
    <string name="HoraireSpinnerDlg_impossible_ajouter_notification_passage">Can\'t add notification for this transit</string>
    <string name="MainDlg_DBACorruption_Pre">A problem have been detected with your data base.</string>
    <string name="MainDlg_DBACorruption_Post">Deleting data. Please make data\'s update.</string>
    <string name="FavorisDlg_suppression">Remove</string>
    <string name="FavorisDlg_visualisation">Display</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="eula_nomfichier">EULA</string>
    <string name="notifier_HeureNotification">Notification Time</string>
    <string name="RechercheArretDlg_Autres_Options">Other search options:</string>
    <string name="AProposDlg_Demande_Support">If you need support, please contact :</string>
    <string name="AProposDlg_Compagnie_Genie_Informatique">Rhatec is a company founded by 3 students in computer engineering.</string>
    <string name="AProposDlg_Remerciements">Special thanks: </string>
    <string name="AProposDlg_DavidCerat">David Cérat - Graphic designer (application icon and transport service map)</string>
    <string name="AProposDlg_Developpeur">Developer:</string>
    <string name="AProposDlg_Contributeurs">Contributors:</string>
    <string name="General_Nord">North</string>
    <string name="General_Sud">South</string>
    <string name="General_Est">East</string>
    <string name="General_Ouest">West</string>
    <string name="General_Centre">Center</string>
    <string name="General_Ext">Out.</string>
    <string name="UpdateManager_Extraction_In_Progress">Extraction in progress...:</string>
    <string name="UpdateManager_Files">files.</string>
    <string name="editer">Edit</string>
    <string name="RechercheArretTrainDlg_PlanReseau">Map of the network</string>
    <string name="RechercheArretTrainDlg_ListeTrains">Route Listings</string>
    <string name="SupprimerDBADlg_Supprimer">Delete</string>
    <string name="SupprimerDBADlg_Attendre">Please wait... deleting selected database</string>
    <string name="UpdateManager_protocole_non_supporte">Unsupported protocol. Please update the application.</string>
    <string name="TransportServiceBase_Date_Inconnu">unknown date</string>
    <string name="RechercheArretDlg_Base_de_donnees_valide_du">Database is valid from</string>
    <string name="RechercheArretDlg_au">to</string>
    <string name="ManuelUtilisateur_Titre">User guide</string>
    <string name="ManuelUtilisateur_Bouton">Done</string>
    <string name="ManuelUtilisateur_NomFichier">Manuel-en.html</string>
    <string name="PreferenceDlg_Confirmation_ResetAll_Message">Are you sure you want to remove all database ?</string>
    <string name="PreferenceDlg_Confirmation_ResetAll_Pos">Remove all</string>
    <string name="PreferenceDlg_Confirmation_ResetAll_Title">Remove all database</string>
    <string name="MainDlg_AucuneDBA">No database available for the application. Do you want to download them right now ?</string>
    <string name="HoraireDlg_Trajet_Regulier">Regular circuit</string>
    <string name="FavorisDlg_Aucun_Passage">No future schedule</string>
    <string name="AvertissementValiditeDlg_Ne_Plus_Afficher">Do not display the warning again.</string>
    <string name="AvertissementValiditeDlg_VerifierMAJ">Verify updates</string>
    <string name="AvertissementValiditeDlg_Ignorer">Ignore</string>
    <string name="AvertissementValiditeDlg_Societe">Society</string>
    <string name="AvertissementValiditeDlg_DateDebut">Start date</string>
    <string name="AvertissementValiditeDlg_DateFin">End date</string>
    <string name="AvertissementValiditeDlg_Attention">Warning, the following database might not be up to date:</string>
    <string name="AProposDlg_ThanksDataProviderTitle">Used data:</string>
</resources>