<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblMessage"
        style="@style/TexteStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AvertissementValiditeDlg_Attention" >
    </TextView>

    <TableLayout
        android:id="@+id/layoutListeAvertissement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TitreValidite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblSociete"
                style="@style/TexteStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15px"
                android:paddingRight="15px"
                android:text="@string/AvertissementValiditeDlg_Societe" >
            </TextView>

            <TextView
                android:id="@+id/lblDateDebut"
                style="@style/TexteStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15px"
                android:paddingRight="15px"
                android:text="@string/AvertissementValiditeDlg_DateDebut" >
            </TextView>

            <TextView
                android:id="@+id/lblDateFin"
                style="@style/TexteStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15px"
                android:paddingRight="15px"
                android:text="@string/AvertissementValiditeDlg_DateFin" >
            </TextView>
        </TableRow>
    </TableLayout>

    <CheckBox
        android:id="@+id/cbNePlusAvertir"
        style="@style/TexteStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AvertissementValiditeDlg_Ne_Plus_Afficher" >
    </CheckBox>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <Button
            android:id="@+id/bMAJ"
            style="@style/BoutonStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="3"
            android:text="@string/AvertissementValiditeDlg_VerifierMAJ" >
        </Button>

        <Button
            android:id="@+id/bIgnorer"
            style="@style/BoutonStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="2"
            android:text="@string/AvertissementValiditeDlg_Ignorer" >
        </Button>
    </LinearLayout>

</LinearLayout>