<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:id="@+id/MiseAJourMain">




<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TypeMiseAJourLayout" android:orientation="vertical"><ScrollView android:id="@+id/ScrollView01" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:layout_marginBottom="15px"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblEulaMiseAJour" android:text="@string/miseajour_eula" style="@style/TexteStandardPetit"></TextView>
</ScrollView><LinearLayout android:id="@+id/LinearLayout02" android:orientation="vertical" android:layout_width="fill_parent" android:gravity="bottom" android:minHeight="40px" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblSDCardDetection" android:text="SDCard Detection" android:layout_marginRight="20px" android:layout_marginLeft="20px" style="@style/TexteStandardPetit"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Type de connexion" android:id="@+id/lblConnectionType" android:layout_marginLeft="20px" android:layout_marginRight="20px" style="@style/TexteStandardPetit"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblError" android:layout_marginLeft="20px" android:layout_marginRight="20px" style="@style/TexteStandardPetit"></TextView><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_marginTop="5px"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10px" android:id="@+id/bContinuer" android:minWidth="100px" android:text="@string/MiseAJourDlg_Continuer" style="@style/BoutonStandard"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/bAnnuler" android:minWidth="100px" android:layout_marginLeft="10px" android:text="@string/MiseAJourDlg_Annuler" style="@style/BoutonStandard"></Button></LinearLayout>



</LinearLayout></LinearLayout><LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/RechercheMiseAJourLayout" android:orientation="vertical">
	<TextView android:id="@+id/RechercheMiseAJourlbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" style="@style/TexteStandard" android:text="@string/MiseAJourDlg_Recherche_MAJ"></TextView>

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/AnnulerMAJBtn" android:layout_marginTop="10px" android:layout_gravity="center_horizontal" style="@style/BoutonStandard" android:text="@string/MiseAJourDlg_Annuler_rechercher"></Button>
</LinearLayout>



	

	</LinearLayout>
